--- a/.github/workflows/update-configs.yml
+++ b/.github/workflows/update-configs.yml
@@ -2,7 +2,7 @@ name: Update Proxy Configs
 
 on:
   schedule:
-    - cron:  "*/15 * * * *"
+    - cron:  "0 */1 * * *"
   workflow_dispatch:
 
 permissions:
