--- a/.github/workflows/update-configs.yml
+++ b/.github/workflows/update-configs.yml
@@ -94,7 +94,8 @@ jobs:
         sed -i "s/channel_stats_chart\.svg?v=[0-9]*/channel_stats_chart.svg?v=$timestamp/" README_FA.md
         sed -i "s/performance_report\.html?v=[0-9]*/performance_report.html?v=$timestamp/" README_FA.md
 
-    - name: Setup Git        
+    - name: Setup Git     
+      run: |   
         sed -i "s/channel_stats_chart\.svg?v=[0-9]*/channel_stats_chart.svg?v=$timestamp/" README_CN.md
         sed -i "s/performance_report\.html?v=[0-9]*/performance_report.html?v=$timestamp/" README_CN.md
         
